[tool.poetry]
name = "b"
version = "0.1.0"
description = ""
authors = ["Rafay Ghafoor <rafayghafoor@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
